[tool.poetry]
name = "jobs"
version = "0.1.0"
description = ""
authors = ["Lyle <lyle.wang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
loguru = "^0.6.0"
trio = "^0.22.0"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
